# recover-jerry

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  app.js  state.js  ws.js
frontend/js/components/: date-picker.js  file-browser.js  progress-bar.js  source-card.js
frontend/js/pages/: dashboard.js  recovery.js  results.js  scanner.js
recover_jerry/: __init__.py  __main__.py  app.py  config.py  privileged.py
recover_jerry/api/: preview.py  recovery.py  results.py  router.py  scan.py  system.py  ws.py
recover_jerry/models/: __init__.py  common.py  recovery.py  scan.py  system.py
recover_jerry/recovery/: engine.py
recover_jerry/scanners/: __init__.py  apfs_snapshot.py  base.py  cloud_trash.py  file_carving.py  registry.py  spotlight.py  time_machine.py  trash.py
recover_jerry/services/: date_filter.py  recovery_manager.py  scan_manager.py  system_inspector.py
recover_jerry/utils/: macos_commands.py  permissions.py
scripts/: install.sh  launch.sh
