[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "recover-jerry"
version = "0.1.0"
description = "macOS data recovery tool with web UI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "xattr>=1.0.0",
]

[project.scripts]
recover-jerry = "recover_jerry.__main__:main"
